2014-06-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/configure_alert_template.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/agentes/planned_downtime.editor.php, godmode/setup/news.php,
	include/ajax/module.php, include/functions.php,
	include/functions_ui.php, extensions/insert_data.php,
	operation/netflow/nf_live_view.php,
	operation/reporting/reporting_viewer.php,
	operation/reporting/graph_viewer.php, operation/tree.php,
	operation/agentes/datos_agente.php,
	operation/agentes/estado_monitores.php: fixed the i18n of the
	timepicker.

2014-06-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js: fixed the
	default height for the visualmap editor.
	
	Incident: #823
	
	* godmode/servers/manage_recontask_form.php: fixed PHP warning.

2014-06-02  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css: Change the zindex of autohidden
	menu and shortcut bar to be shown over the gis map for ticket #855

2014-06-02  Sergio Martin <sergio.martin@artica.es>

	* godmode/menu.php: Fixed database interface ACLs for DM flag
	for ticket #849

2014-06-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/snmpconsole/snmp_view.php: restored the lost code from
	the branch 5.
	
	Incident: #845

2014-06-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* general/news_dialog.php: fixed the empty list of news in the first
	login.

2014-06-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb_data.sql: fixed the insertion data of tnews, the lost
	columns.

2014-06-01  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_edit_modules.php: Improved to support
	'FF interval' and 'FF timeout'.

2014-05-31  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_common.php,
	pandoradb.sql, pandoradb.oracle.sql, pandoradb.postgreSQL.sql,